# todo_list

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: conftest.py  test_functional_api.py
todo_app/: app.py  cli.py  config.py
todo_app/api/: main.py
todo_app/db/: models.py
todo_app/templates/: base.html  edit_task.html  task_form.html  tasks.html
todo_app/views/: main.py
todo_list/: app.py  cli.py  config.py  form.py
todo_list/api/: __init__.py  main.py
todo_list/db/: models.py
todo_list/migrations/: env.py
todo_list/serializers/: __init__.py  serializers.py
todo_list/templates/: task_form.html  tasks.html  test.html
todo_list/views/: __init__.py  main.py
