[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["pinheir0g <gv.pinheiro@outlook.com>"]
readme = "README.md"
packages = [{include = "todo_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
pydantic = "^1.10.7"
flask-sqlalchemy = "^3.0.3"
flask-pydantic-spec = "^0.4.3"
requests = "^2.28.2"
wtforms = "^3.0.1"
flask-wtf = "^1.1.1"
flask-migrate = "^4.0.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
